# ntp-missing-author-attribution

./: ChangeLog  Makefile.am  NEWS  README.leapsmear  acinclude.m4  aclocal.m4  bootstrap  br-flock  configure.ac  packageinfo.sh
include/: ntp.h  ntp_worker.h  ntpd.h
lib/isc/: sockaddr.c
libntp/: authkeys.c  authreadkeys.c  decodenetnum.c  icom.c  msyslog.c  ntp_calendar.c  ntp_rfc2553.c  snprintf.c  systime.c  work_thread.c
libparse/: clk_rawdcf.c  kclk_varitext.c
ntpd/: complete.conf.in  invoke-ntp.conf.texi  invoke-ntp.keys.texi  invoke-ntpd.texi  keyword-gen-utd  keyword-gen.c  ntp.conf.5man  ntp.conf.5mdoc  ntp.conf.def  ntp.conf.html  ntp.conf.man.in  ntp.conf.mdoc.in  ntp.keys.5man  ntp.keys.5mdoc  ntp.keys.html  ntp.keys.man.in  ntp.keys.mdoc.in  ntp_config.c  ntp_control.c  ntp_crypto.c  ntp_io.c  ntp_keyword.h  ntp_leapsec.c  ntp_leapsec.h  ntp_loopfilter.c  ntp_monitor.c  ntp_parser.c  ntp_parser.h  ntp_parser.y  ntp_peer.c  ntp_proto.c  ntp_request.c  ntp_restrict.c  ntp_timer.c  ntpd-opts.c  ntpd-opts.h  ntpd.1ntpdman  ntpd.1ntpdmdoc  ntpd.c  ntpd.html  (+3 more)
ntpdate/: ntpdate.c
ntpdc/: invoke-ntpdc.texi  ntpdc-opts.c  ntpdc-opts.h  ntpdc.1ntpdcman  ntpdc.1ntpdcmdoc  ntpdc.c  ntpdc.html  ntpdc.man.in  ntpdc.mdoc.in
ntpq/: invoke-ntpq.texi  ntpq-opts.c  ntpq-opts.h  ntpq-subs.c  ntpq.1ntpqman  ntpq.1ntpqmdoc  ntpq.c  ntpq.h  ntpq.html  ntpq.man.in  ntpq.mdoc.in
ntpsnmpd/: invoke-ntpsnmpd.texi  ntpsnmpd-opts.c  ntpsnmpd-opts.h  ntpsnmpd.1ntpsnmpdman  ntpsnmpd.1ntpsnmpdmdoc  ntpsnmpd.c  ntpsnmpd.html  ntpsnmpd.man.in  ntpsnmpd.mdoc.in
ports/winnt/: ntp.dsw
ports/winnt/instsrv/: Instsrv.dsp
ports/winnt/libntp/: libntp.dsp
ports/winnt/ntp-keygen/: ntpkeygen.dsp
ports/winnt/ntpd/: nt_clockstuff.c  ntpd.dsp
ports/winnt/ntpdate/: ntpdate.dsp
ports/winnt/ntpdc/: ntpdc.dsp
ports/winnt/ntpq/: ntpq.dsp
ports/winnt/vc6/: Instsrv.dsp  libntp.dsp  ntp.dsw  ntpd.dsp  ntpdate.dsp  ntpdc.dsp  ntpkeygen.dsp  ntpq.dsp
ports/winnt/vs2008/libntp/: libntp.vcproj
ports/winnt/vs2013/libntp/: libntp.vcxproj
scripts/: invoke-plot_summary.texi  invoke-summary.texi  ntpsweep  ntpsweep.in  plot_summary-opts  plot_summary.1plot_summaryman  plot_summary.1plot_summarymdoc  plot_summary.html  plot_summary.man.in  plot_summary.mdoc.in  plot_summary.pl  summary-opts  summary.1summaryman  summary.1summarymdoc  summary.html  summary.man.in  summary.mdoc.in  summary.pl
scripts/calc_tickadj/: calc_tickadj.1calc_tickadjman  calc_tickadj.1calc_tickadjmdoc  calc_tickadj.html  calc_tickadj.man.in  calc_tickadj.mdoc.in  invoke-calc_tickadj.texi
scripts/ntp-wait/: invoke-ntp-wait.texi  ntp-wait-opts  ntp-wait.1ntp-waitman  ntp-wait.1ntp-waitmdoc  ntp-wait.html  ntp-wait.man.in  ntp-wait.mdoc.in
scripts/ntpsweep/: invoke-ntpsweep.texi  ntpsweep-opts  ntpsweep.1ntpsweepman  ntpsweep.1ntpsweepmdoc  ntpsweep.html  ntpsweep.in  ntpsweep.man.in  ntpsweep.mdoc.in
scripts/ntptrace/: invoke-ntptrace.texi  ntptrace-opts  ntptrace.1ntptraceman  ntptrace.1ntptracemdoc  ntptrace.html  ntptrace.man.in  ntptrace.mdoc.in
scripts/update-leap/: invoke-update-leap.texi  update-leap-opts  update-leap.1update-leapman  update-leap.1update-leapmdoc  update-leap.html  update-leap.man.in  update-leap.mdoc.in
sntp/: Makefile.am  configure.ac  invoke-sntp.texi  log.c  main.c  sntp-opts.c  sntp-opts.h  sntp.1sntpman  sntp.1sntpmdoc  sntp.html  sntp.man.in  sntp.mdoc.in
sntp/libevent/sample/: http-server.c
sntp/libevent/test/: bench_httpclient.c  regress.c  regress_dns.c  regress_http.c  regress_minheap.c  test-ratelim.c  test-time.c
sntp/libopts/compat/: pathfind.c
sntp/m4/: ntp_libevent.m4  ntp_libntp.m4  ntp_problemtests.m4  ntp_rlimit.m4  ntp_unitytest.m4  openldap-thread-check.m4  os_cflags.m4
sntp/tests/: Makefile.am  c_fileHandlingTest.h  crypto.c  fileHandlingTest.c  fileHandlingTest.h  fileHandlingTest.h.in  g_crypto.cpp  g_keyFile.cpp  g_kodDatabase.cpp  g_kodFile.cpp  g_nameresolution.cpp  g_utilities.cpp  keyFile.c  kodDatabase.c  kodFile.c  nameresolution.c  networking.c  packetHandling.c  packetProcessing.c  run-crypto.c  run-keyFile.c  run-kodDatabase.c  run-kodFile.c  run-nameresolution.c  run-networking.c  run-packetHandling.c  run-packetProcessing.c  run-t-log.c  run-utilities.c  sntptest.h  t-log.c  utilities.c  utilities.cpp
sntp/unity/: Makefile.am  unity.c  unity_config.h  unity_internals.h
sntp/unity/auto/: generate_test_runner.rb
tests/: Makefile.am
tests/bug-2803/: Makefile-  Makefile.am  TestProductionCode_Runner.c  bug-2803.c  bug-2803.h  run-bug-2803.c  ut-2803.c
tests/libntp/: Makefile.am  a_md5encrypt.c  atoint.c  atouint.c  authkeys.c  buftvtots.c  c_lfptest.h  c_sockaddrtest.h  c_timestructs.c  calendar.c  caljulian.c  caltontp.c  calyearstart.c  clocktime.c  decodenetnum.c  g_statestr.cpp  hextoint.c  hextolfp.c  humandate.c  lfpfunc.c  lfptest.c  lfptest.h  lfptostr.c  modetoa.c  msyslog.c  netof.c  numtoa.c  numtohost.c  octtoint.c  prettydate.c  recvbuff.c  refidsmear.c  refnumtoa.c  run-a_md5encrypt.c  run-atoint.c  run-atouint.c  run-authkeys.c  run-buftvtots.c  run-calendar.c  run-caljulian.c  (+72 more)
tests/ntpd/: Makefile.am  g_leapsec.cpp  g_ntpdtest.cpp  leapsec.c  leapsec.cpp  ntp_prio_q.c  ntp_restrict.c  ntp_scanner.c  ntp_signd.c  ntp_signdT.c  ntp_util.c  rc_cmdlength.c  run-leapsec.c  run-ntp_prio_q.c  run-ntp_restrict.c  run-ntp_scanner.c  run-ntp_signd.c  run-ntp_signdT.c  run-ntp_util.c  run-rc_cmdlength.c  run-t-ntp_scanner.c  run-t-ntp_signd.c  t-ntp_scanner.c  t-ntp_signd.c
tests/ntpq/: Makefile.am  run-t-ntpq.c  t-ntpq.c
tests/sandbox/: Makefile.am  Makefile.in  run-bug-2803.c  run-uglydate.c  smeartest.c  uglydate.c  ut-2803.c
tests/sec-2853/: Makefile.am  Makefile.in  run-sec-2853.c  sec-2853.c
util/: ansi2knr.c  invoke-ntp-keygen.texi  ntp-keygen-opts.c  ntp-keygen-opts.h  ntp-keygen.1ntp-keygenman  ntp-keygen.1ntp-keygenmdoc  ntp-keygen.c  ntp-keygen.html  ntp-keygen.man.in  ntp-keygen.mdoc.in  ntptime.c
